feat: BinarySearch Base + shift

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ paradigms.iml
 /java-solutions/expression/exceptions/TripleParser.java
 /java-solutions/expression/exceptions/ExceptionsTestSet.java
 /java-solutions/expression/package-info.java
+
+/java-solutions/search/BinarySearchTest.java
